# personal_website

./: Gemfile  _config.yml  cv.tex  export_to_pdf.py  pyproject.toml
.github/: ci.yml
_data/: data.yml
_includes/: about.html  call-to-action.html  contact.html  education.html  experience.html  head.html  header.html  nav.html  portfolio.html  publications.html  services.html  skills.html
_layouts/: front.html
_sass/: _base.scss  _mixins.scss
css/: main.scss
js/: jquery.easing.min.js
