[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = ""
authors = ["João Fonseca <joaopbf9@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
